--- a/.github/workflow/cicd.yml
+++ b/.github/workflow/cicd.yml
@@ -8,14 +8,29 @@ jobs:
   build:
     runs-on: [ubuntu-latest]
     steps:
-        - name: Checkout source
-          uses: actions/checkout@v3
-        - name: Setup Java
-          uses: actions/setup-java@v3
-          with:
-            distribution: 'temurin'
-            java-version: '17'
-        - name: Build Project
-          run: ./gradlew build
-        - name: Login to the docker hub
-          run: docker login -u
+      - name: Checkout source
+        uses: actions/checkout@v3
+      - name: Setup Java
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+      - name: Build Project
+        run: ./gradlew build
+      - name: Login to the docker hub
+        run: docker login -u ${{secrets.DOCKER_USERNAME}} - p ${{secrets.DOCKER_PASSWORD}}
+      - name: Build docker image
+        run: docker build -t ec2/springboot-example .
+      - name: Publish image to docker hub
+        run: docker push ec2/springboot-example:latest
+
+  deploy:
+    needs: build
+    runs-on: [aws-ec2]
+    steps:
+      - name: Pull image from docker hub
+        run: docker pull ec2/springboot-example:latest
+      - name: Delete old container
+        run: docker rm -f springboot-example-container
+      - name: Run docker container
+        run: docker run -d -p 8080:8080 --name springboot-example-container ec2/springboot-example
